# sudoku-rs

./: Cargo.toml  readme.md
src/: board.rs  board4x4.rs  board9x9.rs  lib.rs
src/utils/: output.rs
tests/: iter_tests.rs  solve_4x4.rs  solve_9x9.rs
tests/boards/: b4_1.json  b4_2.json  b9_1_flatten.json  b9_2.json  b9_2_flatten.json
