[package]
name = "sudoku-rs"
version = "0.1.0"
authors = ["Ziyang Li <liby99@seas.upenn.edu>"]
edition = "2018"
description = "Sudoku solving library & executables"
license = "MIT"
keywords = ["llvm", "ir"]
repository = "https://github.com/liby99/sudoku-rs"

[dependencies]
rand = "0.7"
serde_json = "1.0"
structopt = "0.3"
